# rick

./: Cargo.toml  p.py
src/: main.rs  p
