[package]
name = "rick"
version = "0.1.0"
edition = "2021"
authors = ["pvanx"]
description = "alat pengecekan endpoint sensitif dengan cara sederhana"

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
regex = "1.5"
url = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
governor = "0.6"
nonzero_ext = "0.3"