[package]
name = "rick"
version = "0.1.0"
edition = "2021"
authors = ["vuvkoblkb"]
description = "A security scanner for web applications"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "native-tls"] }
futures = "0.3.28"
anyhow = "1.0.71"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
regex = "1.8.3"
url = "2.3.1"
governor = "0.5.1"
nonzero_ext = "0.3.0"
async-trait = "0.1.68"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.26"
indicatif = "0.17.3"
colored = "2.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true