[package]
name = "rick"
version = "0.1.0"
edition = "2021"
authors = ["vuvkoblkb"]
description = "An advanced security scanner for web applications"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing and manipulation
url = "2.4"

# Regular expressions
regex = "1.8"

# Rate limiting
governor = "0.5"

# Logging
env_logger = "0.10"
log = "0.4"

# Utilities
nonzero_ext = "0.3"
async-trait = "0.1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "rick"
path = "src/main.rs"